<resources>
    <string name="app_name">ChatRoom</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="log_out">Log out</string>
    <string name="type_a_message">Type a message</string>
    <string name="clear_chat">Clear chat</string>
    <string name="delete_account">Delete account</string>
</resources>